--- a/game-project/src/css/style.css
+++ b/game-project/src/css/style.css
@@ -48,7 +48,7 @@ p, li, .box-symbol span { color: darkgray; font-family: 'Poppins'; font-size: 0.
   border-bottom: 4px solid darkgray;
 }
 
-#img-background1 {
+#img-schnick-logo {
   width: 20vw;
   aspect-ratio: 1/1;
 }
